hsds/templates/hsds/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hsds
  name: hsds
  namespace: hsds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hsds
  template:
    metadata:
      labels:
        app: hsds
    spec:
      containers:
        - name: sn
          image: hdfgroup/hsds:v0.7.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1G"
              cpu: "50m"
            limits:
              memory: "1G"
              cpu: "100m"
          volumeMounts:
          #   - name: accounts
          #     mountPath: "/config/passwd.txt"
          #     subPath: passwd.txt
            - name: config
              mountPath: "/config/config.yml"
              subPath: config.yml
            - name: override
              mountPath: "/config/override.yml"
              subPath: override.yml
          ports:
            - containerPort: 5101
          livenessProbe:
            httpGet:
              path: /info
              port: 5101
            initialDelaySeconds: 5
            periodSeconds: 60
        - name: dn
          image: hdfgroup/hsds:v0.7.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: ["/sbin/killall5", "-15"]
          resources:
            requests:
              memory: "2G"
              cpu: "50m"
            limits:
              memory: "2G"
              cpu: "100m"
          volumeMounts:
            - name: config
              mountPath: "/config/config.yml"
              subPath: config.yml
            - name: override
              mountPath: "/config/override.yml"
              subPath: override.yml
          ports:
            - containerPort: 6101
          livenessProbe:
            httpGet:
              path: /info
              port: 6101
            initialDelaySeconds: 5
            periodSeconds: 60
      volumes:
      #   - name: accounts
      #     secret:
      #       secretName: user-password
        - name: config
          configMap:
            name: hsds-config
        - name: override
          configMap:
            name: hsds-override
