hsds/templates/hsds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hsds
  namespace: hsds
  labels:
    app: hsds
spec:
  selector:
    app: hsds
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 5101
